# rust-tuto

./: .gitignore
ch04/: Cargo.toml
ch04/move-test/: Cargo.toml
ch04/move-test/src/: main.rs
ch04/src/: main.rs
ch05/shapes/src/: main.rs
ch05/src/: main.rs
ch05/tryouts/: Cargo.toml
ch05/tryouts/src/: main.rs
ch06/shapes/: Cargo.toml
ch06/shapes/src/: main.rs
ch06/tryouts/: Cargo.toml
ch06/tryouts/src/: main.rs
ch06/wallet/: Cargo.toml
ch06/wallet/src/: main.rs
ch06_enums/src/: main.rs
ch07-08/collections/: Cargo.toml
ch07-08/collections/src/: main.rs
ch07-08/vecalc/: Cargo.toml
ch07-08/vecalc/src/: calculus.rs  lib.rs  main.rs
ch09/good-reader/: Cargo.toml
ch09/good-reader/src/: main.rs
ch09/tryouts/: text.txt
ch09/tryouts/src/: main.rs
ch10/dynamic-type/: Cargo.toml
ch10/dynamic-type/src/: main.rs
ch10/tryouts/: Cargo.toml
ch10/tryouts/src/: main.rs
ch11/vecalc/: Cargo.toml
ch12/minigrep/: Cargo.toml
ch12/minigrep/src/: config.rs  lib.rs  main.rs
ch12/tryouts/time-checks/: Cargo.toml
ch13/closures/src/: main.rs
old/ch04-old/: Cargo.toml
old/ch04-old/src/: main.rs
old/ch04/src/: main.rs
old/ch05/src/: main.rs
old/ch06_enums/: Cargo.toml
old/ch06_enums/src/: main.rs
tryouts/: README.md
tryouts/1.2-1.0/: Program.cs  Program.java  app.js  app.py  app.ts  main.c  main.cpp  main.go  main.rs  run.sh  rust.out
web/basix/: Cargo.toml  commands.md
web/basix/src/: errors.rs  main.rs
web/basix/src/web/: mod.rs  routes_greet.rs  routes_login.rs  routes_samples.rs
web/basix/tests/: dev_mode.rs
(+6 files in other folders)
